# spy

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: api.rs  auth.rs  daemon.rs  error.rs  ipc.rs  lib.rs  model.rs  paths.rs  player.rs
core/tests/: api_conversion_test.rs  api_test.rs  auth_test.rs  model_test.rs  paths_test.rs  player_queue_test.rs
docs/plans/: 2026-04-26-spfy-design.md  2026-04-26-spfy-implementation.md
tui/: Cargo.toml
tui/src/: app.rs  event.rs  lib.rs  main.rs  remote.rs  ui.rs
tui/tests/: app_test.rs
