[workspace]
resolver = "2"
members = ["core", "tui"]
exclude = ["vendored/rspotify-model"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nimishgj <nimisha@base14.io>"]
license = "MIT"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
directories  = "5"

[patch.crates-io]
rspotify-model = { path = "vendored/rspotify-model" }

[profile.release]
lto = true
codegen-units = 1
