[package]
name = "spfy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for spfy: auth, Spotify API wrapper, librespot player."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true

librespot       = { version = "0.8", default-features = false, features = ["rodio-backend", "rustls-tls-native-roots"] }
librespot-oauth = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
rspotify        = { version = "0.16", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
rodio           = "0.20"
souvlaki        = "0.8"

[dev-dependencies]
tempfile = "3"
