[package]
name = "spfy"
version.workspace = true
edition.workspace = true

[lib]
name = "spfy"
path = "src/lib.rs"

[[bin]]
name = "spfy"
path = "src/main.rs"

[dependencies]
spfy-core = { path = "../core" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

ratatui   = "0.29"
crossterm = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
